modules/security/main.tf
# WEB NSG

resource "azurerm_network_security_group" "web_nsg" {

  name                = "${var.project_name}-${var.environment}-web-nsg"

  location            = var.location

  resource_group_name = var.resource_group_name

}
 
resource "azurerm_network_security_rule" "web_http" {

  name                        = "Allow-HTTP"

  priority                    = 100

  direction                   = "Inbound"

  access                      = "Allow"

  protocol                    = "Tcp"

  source_port_range           = "*"

  destination_port_range     = "80"

  source_address_prefix      = "*"

  destination_address_prefix = "*"

  resource_group_name         = var.resource_group_name

  network_security_group_name = azurerm_network_security_group.web_nsg.name

}
 
resource "azurerm_network_security_rule" "web_https" {

  name                        = "Allow-HTTPS"

  priority                    = 110

  direction                   = "Inbound"

  access                      = "Allow"

  protocol                    = "Tcp"

  source_port_range           = "*"

  destination_port_range     = "443"

  source_address_prefix      = "*"

  destination_address_prefix = "*"

  resource_group_name         = var.resource_group_name

  network_security_group_name = azurerm_network_security_group.web_nsg.name

}
 
# APP NSG

resource "azurerm_network_security_group" "app_nsg" {

  name                = "${var.project_name}-${var.environment}-app-nsg"

  location            = var.location

  resource_group_name = var.resource_group_name

}
 
resource "azurerm_network_security_rule" "app_from_web" {

  name                        = "Allow-Web-To-App"                         
  priority                    = 100

  direction                   = "Inbound"

  access                      = "Allow"

  protocol                    = "Tcp"

  source_port_range           = "*"

  destination_port_range     = "8080"

  source_address_prefix      = "10.10.1.0/24"

  destination_address_prefix = "*"

  resource_group_name         = var.resource_group_name

  network_security_group_name = azurerm_network_security_group.app_nsg.name

}
 
# DB NSG

resource "azurerm_network_security_group" "db_nsg" {

  name                = "${var.project_name}-${var.environment}-db-nsg"

  location            = var.location

  resource_group_name = var.resource_group_name

}
 
resource "azurerm_network_security_rule" "db_from_app" {

  name                        = "Allow-App-To-DB"

  priority                    = 100

  direction                   = "Inbound"

  access                      = "Allow"

  protocol                    = "Tcp"

  source_port_range           = "*"

  destination_port_range     = "1433"

  source_address_prefix      = "10.10.2.0/24"

  destination_address_prefix = "*"

  resource_group_name         = var.resource_group_name

  network_security_group_name = azurerm_network_security_group.db_nsg.name

}
 
# Associate NSGs to subnets

resource "azurerm_subnet_network_security_group_association" "web_assoc" {

  subnet_id                 = var.web_subnet_id

  network_security_group_id = azurerm_network_security_group.web_nsg.id

}
 
resource "azurerm_subnet_network_security_group_association" "app_assoc" {

  subnet_id                 = var.app_subnet_id

  network_security_group_id = azurerm_network_security_group.app_nsg.id

}
 
resource "azurerm_subnet_network_security_group_association" "db_assoc" {

  subnet_id                 = var.db_subnet_id

  network_security_group_id = azurerm_network_security_group.db_nsg.id

}
